--- a/crispr_analyses/workflow/scripts/manuscript/figS8_predictors_vs_crispr_effects.Rmd
+++ b/crispr_analyses/workflow/scripts/manuscript/figS8_predictors_vs_crispr_effects.Rmd
@@ -31,9 +31,9 @@ library(ROCR)
 library(caTools)
 
 # required functions
-proj_dir <- snakemake@config$proj_dir
-source(file.path(proj_dir, "CRISPR_benchmarks/workflow/scripts/crisprComparisonLoadInputData.R"))
-source(file.path(proj_dir, "CRISPR_benchmarks/workflow/scripts/crisprComparisonPlotFunctions.R"))
+crispr_benchmark_dir <- snakemake@config$crispr_benchmark_dir
+source(file.path(crispr_benchmark_dir, "workflow/scripts/crisprComparisonLoadInputData.R"))
+source(file.path(crispr_benchmark_dir, "workflow/scripts/crisprComparisonPlotFunctions.R"))
 ```
 
 ***
@@ -182,7 +182,7 @@ plot_grid(
   )
 
 # save to pdf
-ggsave(filename = "results/manuscript/plots/figS9_predictors_vs_crispr_effects_rasterized.pdf",
+ggsave(filename = "results/manuscript/plots/figS8_predictors_vs_crispr_effects_rasterized.pdf",
        height = 14, width = 10)
 ```
 
