Update main benchmarking pred config file
Update main_benchmarking_pred_config.tsv to new version synchronized with mansuscript content.

--- a/crispr_analyses/workflow/scripts/manuscript/main_fig5_additional_models.Rmd
+++ b/crispr_analyses/workflow/scripts/manuscript/main_fig5_additional_models.Rmd
@@ -77,7 +77,7 @@ atac_models <- tibble(
   name = c("ATAC + H3K27ac + ENCODE Hi-C", "ATAC + H3K27ac", "ATAC + ENCODE Hi-C",
            "ATAC-only"),
   model = c("ENCODE_rE2GatacH3k27acHiC.Score", "ENCODE_rE2GatacH3k27ac.Score",
-            "ENCODE_rE2GatacHiC.Score", "ENCODE_rE2GatacMegamap.Score")
+            "ENCODE_rE2GatacHiC.Score", "ENCODE_rE2Gatac.Score")
 )
   
 # create performance table for DNase-seq based models
@@ -140,7 +140,7 @@ ggsave(filename = "results/manuscript/plots/main_fig5g_additional_models_bar.pdf
 ***
 
 ## Plot PRC for each model
-```{r, fig.height=3.5, fig.width=7}
+```{r, fig.height=3.5, fig.width=9}
 # process merged data for benchmarking analyses, including filtering for ValidConnection == TRUE
 merged <- processMergedData(merged, pred_config = pred_config, filter_valid_connections = TRUE,
                             include_missing_predictions = TRUE)
@@ -161,7 +161,7 @@ makePRCurvePlot(pr, n_pos = n_pos, pct_pos = pct_pos, plot_name = "Performance a
 
 # save PRC plot to file
 ggsave(filename = "results/manuscript/plots/main_fig5f_additional_models_prc.pdf", height = 3.5,
-       width = 7)
+       width = 9)
 ```
 
 ***
